# n-body

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OPTIMIZATIONS.md  cmake_install.cmake  compile_commands.json  profile_with_dtrace.sh
src/: base.c  main.c
